v1.3 fixed links and logo on Firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-a {
-  max-width: fit-content;
-}
-
 address {
   font-style: normal;
 }
@@ -57,6 +53,7 @@ button {
 .header__logo {
   display: flex;
   justify-content: center;
+  width: 148px;
   height: 105px;
 }
 
@@ -69,6 +66,11 @@ button {
 .header__address {
   display: grid;
   justify-content: end;
+  align-content: center;
+}
+
+.header__address a {
+  max-width: fit-content;
 }
 
 .cover {
